  * control: Bump libdrm-dev build-dependency to 2.4.45.
  * control: Add versioned libglapi-mesa dependency to libosmesa6.
  * libgl1-mesa(-swx11)-dev.install.in: Install the correct pkgconfig/gl.pc files.
  * rules: Add --disable-shared-glapi to the swx11-i386-i686 target.

  [ Maarten Lankhorst ]
  * Bump libdrm-dev to 2.4.46.

 -- Jon Severinsson <jon@severinsson.net>  Tue, 20 Aug 2013 18:00:00 +0200

mesa (9.2~rc1-1) experimental; urgency=low

  * New upstream release.
  * Refresh patches for 9.2:
    - 02_gbm_no_undefined.diff.
    - 04_osmesa_version.diff
    - 06_kfreebsd-ftbfs.diff
  * Removed writes to srcdir, fixing parallel builds.
    - 12_fix_glapi_gen.diff
  * Require llvm-3.3-dev >= 1:3.3-4 and libelf-dev.
  * Update symbols files.

 -- Maarten Lankhorst <maarten.lankhorst@ubuntu.com>  Tue, 20 Aug 2013 15:42:31 +0200

mesa (9.1.6-2) unstable; urgency=low

  * Don't run 'make -j' if DEB_BUILD_OPTIONS doesn't set parallel.  Oops.

 -- Julien Cristau <jcristau@debian.org>  Mon, 12 Aug 2013 08:00:21 +0200

mesa (9.1.6-1) unstable; urgency=low

  [ Andreas Boll ]
  * New upstream release. (Closes: #717410)
  * Cherry-pick commit 0dbbfa0 (mesa: Fix MESA_PATCH version) from
    upstream.

  [ Julien Cristau ]
  * Don't run configure for different builds in parallel.

 -- Julien Cristau <jcristau@debian.org>  Sun, 11 Aug 2013 18:15:58 +0200

mesa (9.1.4-1) unstable; urgency=low

  [ Julien Cristau ]
  * Don't call wayland_buffer_is_drm from libgbm, it's in libEGL
    (closes: #712556).
  * Make sure libgbm doesn't have undefined symbols.

  [ Andreas Boll ]
  * Use dpkg-buildflags.
  * Disable silent rules.
  * Cherry-pick commit 0829b89 (mesa: Fix ieee fp on Alpha) from upstream
    (Fixes FTBFS on alpha)

  [ Timo Aaltonen ]
  * New upstream release.

  [ Julien Cristau ]
  * libegl1-mesa-drivers depends on libgl1-mesa-dri for libllvmradeon
    (closes: #714828)

 -- Julien Cristau <jcristau@debian.org>  Sat, 06 Jul 2013 11:37:34 +0200
