@@ -10,6 +10,9 @@ mesa (9.2~rc1-2) UNRELEASED; urgency=low
   [ Maarten Lankhorst ]
   * Bump libdrm-dev to 2.4.46.
 
+  [ Sven Joachim ]
+  * Remove the workaround for sparc introduced in version 7.10-2.
+
  -- Jon Severinsson <jon@severinsson.net>  Tue, 20 Aug 2013 18:00:00 +0200
 
 mesa (9.2~rc1-1) experimental; urgency=low
